@@ -3,10 +3,7 @@ package com.aivle.carekids.domain.place.repository;
 
 import com.aivle.carekids.domain.common.dto.RegionDto;
 import com.aivle.carekids.domain.common.dto.SearchRegionCateDto;
-import com.aivle.carekids.domain.place.dto.PlaceDetailDto;
-import com.aivle.carekids.domain.place.dto.PlaceKeywordDto;
-import com.aivle.carekids.domain.place.dto.PlaceListDto;
-import com.aivle.carekids.domain.place.dto.PlaceSubcateDto;
+import com.aivle.carekids.domain.place.dto.*;
 import com.querydsl.core.types.Projections;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.jpa.impl.JPAQuery;
@@ -16,6 +13,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.support.PageableExecutionUtils;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -43,8 +41,46 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
                                 place.placeAddress,
                                 place.placeNewAddress,
                                 place.placeOperateTime,
-                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName)
+                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName),
+                                Projections.constructor(PlaceMaincateDto.class, placeCate.placeSubcate.placeMaincate.placeMaincateId, placeCate.placeSubcate.placeMaincate.placeMaincateName)
                         )).from(place)
+                .join(place.placeCates, placeCate)
+                .where(regionEq(regionId))
+                .orderBy(place.updatedAt.desc())
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .fetch();
+
+        Map<Long, List<PlaceKeywordDto>> keywordsByPlaceList = findKeywordsByPlaceList(content);
+        content.forEach(c -> c.setPlaceKeywords(keywordsByPlaceList.get(c.getPlaceId())));
+
+        JPAQuery<Long> countQuery = jpaQueryFactory.select(place.countDistinct()).from(place)
+                .join(place.placeCates, placeCate)
+                .where(regionEq(regionId));
+
+        return PageableExecutionUtils.getPage(content, pageable, countQuery::fetchOne);
+    }
+
+    @Override
+    public Page<PlaceDetailDto> findAllByOrderByUpdatedAtDescByPageByRegionAdmin(Long regionId, Pageable pageable) {
+        List<PlaceDetailDto> content = jpaQueryFactory.select(
+                        Projections.constructor(
+                                PlaceDetailDto.class,
+                                place.placeId,
+                                place.placeName,
+                                place.placeImgUrl,
+                                place.placeAddress,
+                                place.placeNewAddress,
+                                place.placePhone,
+                                place.placeType.stringValue(),
+                                place.placeParking.stringValue(),
+                                place.placeFree.stringValue(),
+                                place.placeOperateTime,
+                                Projections.constructor(RegionDto.class, region.regionId, region.regionName),
+                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName),
+                                Projections.constructor(PlaceMaincateDto.class, placeCate.placeSubcate.placeMaincate.placeMaincateId, placeCate.placeSubcate.placeMaincate.placeMaincateName)
+                        )).from(place)
+                .join(place.region, region)
                 .join(place.placeCates, placeCate)
                 .where(regionEq(regionId))
                 .orderBy(place.updatedAt.desc())
@@ -67,8 +103,20 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
         return isEmpty(regionId) ? null : place.region.regionId.eq(regionId);
     }
 
-    private Map<Long, List<PlaceKeywordDto>> findKeywordsByPlaceList(List<PlaceListDto> content) {
-        List<Long> placeIdList = content.stream().map(PlaceListDto::getPlaceId).toList();
+    private Map<Long, List<PlaceKeywordDto>> findKeywordsByPlaceList(List<?> content) {
+        List<Long> placeIdList = List.of();
+        if (content.isEmpty()) {
+            placeIdList = Collections.emptyList(); // 예외 처리 또는 기본 값 할당
+        }
+        else if (content.get(0) instanceof PlaceListDto){
+            placeIdList = content.stream()
+                        .map(obj -> ((PlaceListDto) obj).getPlaceId())
+                        .collect(Collectors.toList());}
+        else if (content.get(0) instanceof PlaceDetailDto){
+            placeIdList = content.stream()
+                    .map(obj -> ((PlaceDetailDto) obj).getPlaceId())
+                    .collect(Collectors.toList());
+    }
 
 
         return jpaQueryFactory.select(
@@ -99,7 +147,8 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
                         place.placeFree.stringValue(),
                         place.placeOperateTime,
                         Projections.constructor(RegionDto.class, region.regionId, region.regionName),
-                        Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName)
+                        Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName),
+                        Projections.constructor(PlaceMaincateDto.class, placeCate.placeSubcate.placeMaincate.placeMaincateId, placeCate.placeSubcate.placeMaincate.placeMaincateName)
                 )).from(place)
                 .join(place.region, region)
                 .join(place.placeCates, placeCate)
@@ -137,12 +186,13 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
                                 place.placeAddress,
                                 place.placeNewAddress,
                                 place.placeOperateTime,
-                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName)
+                                Projections.constructor(PlaceSubcateDto.class, placeCate.placeSubcate.placeSubcateId, placeCate.placeSubcate.placeSubcateName),
+                                Projections.constructor(PlaceMaincateDto.class, placeCate.placeSubcate.placeMaincate.placeMaincateId, placeCate.placeSubcate.placeMaincate.placeMaincateName)
                         )).from(place)
                 .join(place.placeCates, placeCate)
                 .where(
                         regionEq(searchRegionCateDto.getRegionDto().getRegionId()),
-                        subcateEq(searchRegionCateDto.getSubcateDto().getPlaceSubcateName()),
+                        maincateEq(searchRegionCateDto.getMaincateDto().getPlaceMaincateName()),
                         queryContains(searchRegionCateDto.getQuery())
                 )
                 .orderBy(place.updatedAt.desc())
@@ -157,7 +207,7 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
                 .join(place.placeCates, placeCate)
                 .where(
                         regionEq(searchRegionCateDto.getRegionDto().getRegionId()),
-                        subcateEq(searchRegionCateDto.getSubcateDto().getPlaceSubcateName()),
+                        maincateEq(searchRegionCateDto.getMaincateDto().getPlaceMaincateName()),
                         queryContains(searchRegionCateDto.getQuery())
                 );
 
@@ -166,6 +216,10 @@ public class PlaceRepositoryImpl implements PlaceRepositoryCustom {
 
     private BooleanExpression subcateEq(String subcateName) {
         return isEmpty(subcateName) ? null : placeCate.placeSubcate.placeSubcateName.eq(subcateName);
+    }
+
+    private BooleanExpression maincateEq(String maincateName) {
+        return isEmpty(maincateName) ? null : placeCate.placeSubcate.placeMaincate.placeMaincateName.eq(maincateName);
     }
 
     private BooleanExpression queryContains(String query) {
